--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   english_words: ^4.0.0
   table_calendar: ^3.0.9
   provider: ^6.0.0
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
